--- a/userpage.html
+++ b/userpage.html
@@ -389,7 +389,7 @@
             <div class="clear dividewhite3"></div>
             <div class="plain-content wopadd">
               <input type="button" value="Save as PDF" class="button-red" />
-              <input type="button" value="Print" class="button-blue" />
+              <input type="button" value="Print" class="button-blue" onclick="window.print();"/>
             </div>
             <div class="clear dividewhite3"></div>
             <!-- / Resume -->
